Cleanup of CMakeLists, package.xml.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(nmea_navsat_driver)
 
-find_package(catkin REQUIRED COMPONENTS roslint)
+find_package(catkin REQUIRED)
 
 catkin_python_setup()
 catkin_package()
@@ -13,6 +13,8 @@ install(PROGRAMS
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-# Check package for pep8 style, add a test to fail on violations.
-roslint_python()
-roslint_add_test()
+if (CATKIN_ENABLE_TESTING)
+  find_package(roslint)
+  roslint_python()
+  roslint_add_test()
+endif()
