--- a/package.xml
+++ b/package.xml
@@ -1,34 +1,29 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>nmea_navsat_driver</name>
   <version>0.5.0</version>
   <description>
-	Package to parse NMEA strings and publish a very simple GPS message. Does not require the GPSD deamon.
+    Package to parse NMEA strings and publish a very simple GPS message. Does not 
+    require or use the GPSD deamon.
   </description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <maintainer email="eric@ericperko.com">Eric Perko</maintainer>
 
-  <!-- One license tag required, multiple allowed, one license per tag -->
   <license>BSD</license>
 
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <url type="website">http://ros.org/wiki/nmea_navsat_driver</url>
 
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
   <author email="eric@ericperko.com">Eric Perko</author>
   <author>Steven Martin</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roslint</build_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>python-serial</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>nmea_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>python-serial</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>nmea_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
 
+  <test_depend>roslint</test_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- This is a pure Python package, so mark it architecture independent -->
