Update maintainer to Ed Venator
Also, remove boilerplate comments from package.xml

--- a/package.xml
+++ b/package.xml
@@ -6,18 +6,9 @@
 	Package to parse NMEA strings and publish a very simple GPS message. Does not require the GPSD deamon.
   </description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <maintainer email="eric@ericperko.com">Eric Perko</maintainer>
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
+  <maintainer email="evenator@gmail.com">Ed Venator</maintainer>
   <license>BSD</license>
-
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <url type="website">http://ros.org/wiki/nmea_navsat_driver</url>
-
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
   <author email="eric@ericperko.com">Eric Perko</author>
   <author>Steven Martin</author>
 
@@ -29,7 +20,6 @@
   <run_depend>nmea_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
 
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- This is a pure Python package, so mark it architecture independent -->
     <architecture_independent/>
