adapted to ros1 structure for easier code sync

--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
     <exec_depend>geometry_msgs</exec_depend>
     <exec_depend>nmea_msgs</exec_depend>
     <exec_depend>sensor_msgs</exec_depend>
+    <exec_depend>transforms3d</exec_depend>
 
     <test_depend>python3-pytest</test_depend>
 
