--- a/package.xml
+++ b/package.xml
@@ -17,12 +17,13 @@
     <author email="eric@ericperko.com">Eric Perko</author>
     <author>Steven Martin</author>
 
-    <exec_depend>rclpy</exec_depend>
-    <exec_depend>python-serial</exec_depend>
     <exec_depend>geometry_msgs</exec_depend>
     <exec_depend>nmea_msgs</exec_depend>
+    <exec_depend>rclpy</exec_depend>
     <exec_depend>sensor_msgs</exec_depend>
-    <exec_depend>transforms3d</exec_depend>
+    <exec_depend>python3-numpy</exec_depend>
+    <exec_depend>python-serial</exec_depend>
+    <exec_depend>python-transforms3d-pip</exec_depend>
 
     <test_depend>python3-pytest</test_depend>
 
