Fix PEP8 Violations in ROS 2 (#69)
Fix PEP8 violations and update setup.cfg file for pycodestyle.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,10 @@
 [develop]
 script-dir=$base/lib/nmea_navsat_driver
+
 [install]
 install-scripts=$base/lib/nmea_navsat_driver
+
+[pycodestyle]
+max-line-length = 120
+statistics = True
+show-pep8 = True
