--- a/package.xml
+++ b/package.xml
@@ -22,12 +22,19 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-serial</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-serial</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>nmea_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
 
+  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-virtualserialports-pip</test_depend>
+  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-virtualserialports-pip</test_depend>
   <test_depend>roslint</test_depend>
+  <test_depend>rostest</test_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- This is a pure Python package, so mark it architecture independent -->
