Add automated testing (via catkin_virtualenv) (#136)
Automatically test the code on every push or PR by playing back data to the driver and test whether the expected amount of messages is outputted by the driver and the messages contain the expected data.

The tester can cover more functionality that the current version of the nmea_navsat_driver supports, for these features new PRs will be created. The full usage can be observed in the boschresearch fork.

Signed-off-by: Gabriel Gaessler <gabriel.gaessler@de.bosch.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,15 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(nmea_navsat_driver)
 
-find_package(catkin REQUIRED)
+if (NOT CATKIN_ENABLE_TESTING)
+  find_package(catkin REQUIRED COMPONENTS
+  )
+endif()
+if (CATKIN_ENABLE_TESTING)
+  find_package(catkin REQUIRED COMPONENTS
+    catkin_virtualenv
+  )
+endif()
 
 catkin_python_setup()
 catkin_package()
@@ -19,12 +27,28 @@ install(DIRECTORY launch/
    FILES_MATCHING PATTERN "*.launch"
 )
 
-install(FILES LICENSE.txt
+install(FILES
+   LICENSE.txt
+   test/requirements.txt
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
 if (CATKIN_ENABLE_TESTING)
-  find_package(roslint)
+  catkin_generate_virtualenv(
+    PYTHON_INTERPRETER python3
+  )
+
+  catkin_add_nosetests(
+    test/test_driver.py
+    DEPENDENCIES ${${PROJECT_NAME}_EXPORTED_TARGETS} ${PROJECT_NAME}_generate_virtualenv
+  )
+
+  catkin_install_python(
+    PROGRAMS
+      test/test_driver.py
+    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+  find_package(roslint REQUIRED)
   roslint_python()
   roslint_add_test()
 endif()
